fix: simplify visibility styles in ScrollGoBackBtn and ScrollToTopBtn components; remove unnecessary 'hidden' class from body layout

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -195,7 +195,7 @@
 
   /* BODY */
   .body-layout-classes {
-    @apply mx-auto p-5 px-3 max-w-3xl min-h-screen flex flex-col;
+    @apply mx-auto p-5 px-3 max-w-3xl min-h-screen;
   }
   /* CODING STYLE */
   .coding {
